# tokio-deadlock-detector

./: .gitignore  Cargo.toml  README.md  rustfmt.toml  tokio-deadlock-detector.code-workspace
detector/: Cargo.toml
detector-macros/: Cargo.toml
detector-macros/src/: lib.rs
detector-macros/tests/: macros_tests.rs
detector/src/: graph.rs  lib.rs  monitor.rs  monitored_mutex.rs  watchdog.rs
detector/tests/: monitored_mutex.rs
examples/: deadlock.rs  stalled_monitoring.rs
