[package]
name = "tokio-deadlock-detector"
description = "Detect stalls and deadlocks in the tokio async runtime"
authors = ["Danylo Kravchenko"]
edition = "2024"
license-file = "LICENSE"

[features]
deadlock = []

[dependencies]
detector = { path = "./detector", features = ["deadlock"] }
detector-macros = { path = "./detector-macros", features = ["deadlock"] }
tokio = { workspace = true }

[workspace]
resolver = "3"
members = [
  "detector",
  "detector-macros",
]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
serial_test = "3.2.0"
