[package]
name = "detector-macros"
version = "0.1.0"
edition = "2024"

[features]
deadlock = []

[lib]
proc-macro = true

[dependencies]
detector = {path = "../detector", features = ["deadlock"]}
syn = { version = "2.0", features = ["full", "visit-mut"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
tokio = { workspace = true }
serial_test = { workspace = true }
